<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_teliver_logo"
            android:layout_marginTop="20dp" />


        <TextView
            style="@style/TxtViewOrder"
            android:layout_marginTop="30dp"
            android:text="@string/txtName" />

        <TextView
            style="@style/TxtViewOrder"
            android:text="@string/name"
            android:textColor="@color/colorBlack" />

        <View style="@style/ViewLine" />


        <TextView
            style="@style/TxtViewOrder"
            android:layout_marginTop="10dp"
            android:text="@string/txtMobileNumber" />

        <TextView
            style="@style/TxtViewOrder"
            android:text="@string/txtMobile"
            android:textColor="@color/colorBlack" />

        <View style="@style/ViewLine" />


        <TextView
            style="@style/TxtViewOrder"
            android:layout_marginTop="10dp"
            android:text="@string/txtDeliverTo" />

        <TextView
            style="@style/TxtViewOrder"
            android:text="@string/txtPlace"
            android:textColor="@color/colorBlack" />

        <View style="@style/ViewLine" />

        <TextView
            style="@style/TxtViewOrder"
            android:layout_marginTop="10dp"
            android:text="@string/txtPayment" />

        <TextView
            style="@style/TxtViewOrder"
            android:text="@string/txtPaid"
            android:textColor="@color/colorBlack" />

        <View style="@style/ViewLine" />

    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btnTrip"
            style="@style/BtnTracking"
            android:background="@color/colorPrimaryDark"
            android:text="@string/txtStartTrip"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnPush"
            style="@style/BtnTracking"
            android:layout_marginLeft="0.5dp"
            android:layout_marginStart="0.5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/txtEventPush"
            android:textColor="@color/colorWhite"
            android:visibility="gone" />


    </LinearLayout>


</RelativeLayout>
